some front-end change in heroku server

--- a/csfest/templates/contacts.html
+++ b/csfest/templates/contacts.html
@@ -11,33 +11,18 @@
         left:0px;
       height: 650px;
       float: left;
-      color: white;
+      color: antiquewhite;
+
     /*border-style: groove;*/
       margin-top: 0px;
-      padding-top: 30px;
+      background-image: url('https://wpamelia.com/wp-content/uploads/2019/02/black-background-dark-light-streaks-1679719.jpg');
+      opacity: 0.97;
+      background-size: cover;
+      background-repeat: no-repeat;
 	}
-	.contacts .email{
-		padding-top: 50px;
-	}
-	.contacts .fb{
-		padding-top: 50px;
-	}
-</style>
-<center>
-<div class="contacts">
-	<div class="phone"><i><img src="https://img.icons8.com/ios-filled/50/000000/ringing-phone.png"></i><br>
-	Registration and website : 7908402299<br>
-	Events and others &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: 9007014705
-	</div>
 
-<div class="email">
-	 <i><img src="https://img.icons8.com/ios/50/000000/email-open.png"></i><br>
-	envisiont20@gmail.com
-</div>	
-<div class="fb">
-	<i><img src="https://img.icons8.com/ios-filled/50/000000/facebook-new.png"></i><br>
-	<a href="https://www.facebook.com/envision2020rkm/">@envision2020rkm</a>
-</div>
-</div>
-</center>
+</style>
+
+<div class="contacts"></div>
+	<p>hello check</p>
 {% endblock %}
