--- a/csfest/templates/reach.html
+++ b/csfest/templates/reach.html
@@ -13,7 +13,12 @@
       height: 650px;
       float: left;
     display: inline-block;
-    background: linear-gradient(-30deg,red, yellow, green);
+    /*background: linear-gradient(-30deg,red, yellow, green);*/
+    background-image: url('https://images.alphacoders.com/508/508282.jpg') ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: antiquewhite;
+    opacity: .95;
     }
       /* Set the size of the div element that contains the map */
       #map {
