--- a/csfest/templates/base_generic.html
+++ b/csfest/templates/base_generic.html
@@ -68,15 +68,16 @@
       
     }
 
+    
     .sidebar-nav {
       /*tenet*/
-      background: linear-gradient(100deg, grey, black);
+      background: linear-gradient(90deg, #1a1a1a, black);
       width: 100%;
       height: 650px;
       margin-top: 0px !important;
       padding-bottom: 20px;
       /*border-style: groove;*/
-      float: left;
+        float: left;
       font-size: 20px;
       /*text-transform: uppercase;*/
       font-family: sans-serif;
@@ -84,7 +85,6 @@
       left:0;
       padding-left: 0px;
       padding-right: 0;
-      
     }
 
     .sidebar-nav li {
