--- a/csfest/templates/event_detail.html
+++ b/csfest/templates/event_detail.html
@@ -1,37 +1,35 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+<link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
 <style>
-	.detail{
-	/* dunkirk*/
-	     /*min-width:1270px!important;*/
-	     idth:100%;
-  position: absolute;
-  right: 0px;
-        left:0px;
-      height: 650px;
-      float: left;
-      font-size: 50px;
-      
-    /*height: 650px;
+  .detail{
+  /* dunkirk*/
+      /* min-width:1270px!important;*/
+    width: 100%;
+    height: 650px;
     /*float: right;*/
     margin-top: 0px!important;
     
-    background: linear-gradient(-65deg,	#162d47, #508898, #819fae,#bbdae3,	#4d4d3e);
-	}
-	.detail p{
+   /* background: linear-gradient(-65deg, #162d47, #508898, #819fae,#bbdae3,  #4d4d3e);*/
+    background-image: url('https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/s960x960/83032899_115523946648122_4004241655518461952_o.jpg?_nc_cat=105&_nc_oc=AQkIj_zL7pfLeMuZuZwXwOt424ZCwmKuKX_z8maSxA1eitAVdTB-Uyj1Lg8csFA26VU&_nc_ht=scontent.fccu10-1.fna&_nc_tp=1002&oh=41b456d6f8bd53b7c89fc91cd5ef7a5b&oe=5EA08EF8');
+    opacity: .93;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color:aliceblue;
+  }
+  .detail p{
 color: white;
 text-shadow: 2px 2px #800000;
 padding-left: 10px;
-font-family:  'Indie Flower', cursive;
-font-size: 40px;
-	}
+
+  }
 </style>
   <!--<h1>Title: {{ event.name }}</h1>-->
+
 <div class="detail"> 
-<!--<img src="https://i.pinimg.com/474x/30/63/2c/30632c0aff60354c11b0593f65559941.jpg" width="100%" height="650" style="opacity: 0.1; 
-position: absolute;">--><h2>&nbsp{{ event.name }}</h2> <!-- author detail link not yet defined -->
-  <p> {{ event.description }}</p>
+  <center><h2 style="font-family: 'IM Fell Great Primer SC', serif; font-size: 50px;"><strong>{{ event.name }}</strong></h2></center> <!-- author detail link not yet defined -->
+  <p style="padding-left: 40px;" ><strong>Description:</strong> {{ event.description }}</p>
 </div>
 
  {% endblock %}  
