--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,12 +12,14 @@
 text-shadow: 2px 2px pink;  
 }
   form{
-    margin-top: 20px;
+    margin-top: 0px;
     margin-left:  10px; 
+    padding-top: 60px;
+    
   }
 </style>
 
-<div class="login">
+<div style="background-image: url('https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-0/p180x540/82228206_113251600208690_5554643502693875712_o.png?_nc_cat=108&_nc_oc=AQmlghdrkbYStc4VkLmj7CZFHG7LOFjSymDlR8Z7WfoqLhGvbRL7ZRynqAop6kB7oCg&_nc_ht=scontent.fccu10-1.fna&oh=bcf5bcd87c93e9b8aadaa4e3ed5ec8f0&oe=5E9CE2B8'); height: 650px; width: 100%; opacity:.95 ; background-size: cover; background-repeat: no-repeat;">
 <center>
 {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
