--- a/csfest/templates/reach.html
+++ b/csfest/templates/reach.html
@@ -30,6 +30,12 @@
        }
        .transport h4 p{
         padding-left: 10px!important;
+
+       }
+       .header-name{
+        font-family: 'Amarante', cursive;
+        font-size: 20px;
+        font-weight: bold;
        }
     </style>
 
@@ -39,16 +45,16 @@
   <body>
    <div class="reach">
 
-   	<center><div><!--<h4 style="padding-bottom: 10px;">location:</h4>--> <p>Ramakrishna Mission Residential College,<br> RKMA Main Rd, Narendrapur, Kolkata, West Bengal 700103</p></div></center>
+   	<center><div class ="header-name"><!--<h4 style="padding-bottom: 10px;">location:</h4>--> <p>Ramakrishna Mission Residential College,<br> RKMA Main Rd, Narendrapur, Kolkata, West Bengal 700103</p></div></center>
 
     <!--The div element for the map -->
     <center><div id="map"></div></center>
-    <div class="transport"><br><h4 style="color: red; margin-top: -40px; padding-top: 40px;">Through metro</h4>
-    <br><p style="color: red; margin-top: -30px; margin-bottom: 20px;">Reach Kavi Nazrul metro station. From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur. </p>
-    <br><h4 style="color: red; margin-top: -40px;">Through bus</h4>
-    <br><p style="color: red; margin-top: -30px; margin-bottom: 20px;">Reach Garia bus stand (NOT Garia station or Gariahat). From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur.</p>
-    <br><h4 style="color: red; margin-top: -40px;">Through train (NOT RECOMMENDED)</h4>
-    <br><p style="color: red; margin-top: -30px;">Reach Sonarpur railway station (South line from Sealdah). Board an auto to Kamalgazi. From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur. </p>
+    <div class="transport"><br><h4 style="color: red; margin-top: -40px; padding-top: 40px; font-family: 'Amarante', cursive;">Through metro</h4>
+    <br><p style="color: white; margin-top: -30px; margin-bottom: 20px;">Reach Kavi Nazrul metro station. From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur. </p>
+    <br><h4 style="color: red; margin-top: -40px; font-family: 'Amarante', cursive;">Through bus</h4>
+    <br><p style="color: white; margin-top: -30px; margin-bottom: 20px; ">Reach Garia bus stand (NOT Garia station or Gariahat). From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur.</p>
+    <br><h4 style="color: red; margin-top: -40px; font-family: 'Amarante', cursive;">Through train (NOT RECOMMENDED)</h4>
+    <br><p style="color: white; margin-top: -30px;">Reach Sonarpur railway station (South line from Sealdah). Board an auto to Kamalgazi. From there, board an auto(to Ramakrishna Mission) or a bus (Barasat-Baruipur/Bus no. 218) and deboard at Mission gate/Narendrapur. </p>
   </div>
 </div>
 
