--- a/csfest/templates/base_generic.html
+++ b/csfest/templates/base_generic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  {% block title %}<title>Envision 2019</title>{% endblock %}
+  {% block title %}<title>Envision 2020</title>{% endblock %}
   
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Montserrat:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rouge+Script&display=swap" rel="stylesheet">
@@ -13,7 +13,10 @@
 <link href="https://fonts.googleapis.com/css?family=Redressed&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Alex+Brush&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet"> 
-<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Vidaloka&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Amarante&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Alice&display=swap" rel="stylesheet">
   <style>
     * {
       padding: 0;
@@ -71,7 +74,7 @@
     
     .sidebar-nav {
       /*tenet*/
-      background: linear-gradient(90deg, #1a1a1a, black);
+      background: linear-gradient(90deg,  #2e2e1f,#262626,#1a1a1a, black);
       width: 100%;
       height: 650px;
       margin-top: 0px !important;
