--- a/csfest/templates/event_detail.html
+++ b/csfest/templates/event_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <link href="https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet"> 
 <style>
   .detail{
   /* dunkirk*/
@@ -29,7 +30,7 @@ padding-left: 10px;
 
 <div class="detail"> 
   <center><h2 style="font-family: 'IM Fell Great Primer SC', serif; font-size: 50px;"><strong>{{ event.name }}</strong></h2></center> <!-- author detail link not yet defined -->
-  <p style="padding-left: 40px;" ><strong>Description:</strong> {{ event.description }}</p>
+  <p style="padding-left: 40px; font-family:'Bangers', cursive; font-size: 40px;"> {{ event.description }}</p>
 </div>
 
  {% endblock %}  
