almost done 4th commit heroku

--- a/csfest/templates/base_generic.html
+++ b/csfest/templates/base_generic.html
@@ -17,6 +17,8 @@
 <link href="https://fonts.googleapis.com/css?family=Vidaloka&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amarante&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css?family=Alice&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <style>
     * {
       padding: 0;
@@ -186,7 +188,7 @@
 <div class="title-panel ">
   <div class="left">
     <h1>ENVISION</h1>
-    <h4>come to enjoy</h4>
+    <h4>Think <img src="https://img.icons8.com/color/48/000000/thinking-bubble.png"> Visualize</h4>
 
   </div>
 
