--- a/csfest/templates/event_detail.html
+++ b/csfest/templates/event_detail.html
@@ -30,7 +30,7 @@ padding-left: 10px;
 
 <div class="detail"> 
   <center><h2 style="font-family: 'IM Fell Great Primer SC', serif; font-size: 50px;"><strong>{{ event.name }}</strong></h2></center> <!-- author detail link not yet defined -->
-  <p style="padding-left: 40px; font-family:'Bangers', cursive; font-size: 40px;"> {{ event.description }}</p>
+  <p style="padding-left: 40px; font-family:'Bangers', cursive; font-size: 40px;" class="w3-animate-top"> {{ event.description }}</p>
 </div>
 
  {% endblock %}  
