--- a/csfest/templates/contacts.html
+++ b/csfest/templates/contacts.html
@@ -23,6 +23,22 @@
 
 </style>
 
-<div class="contacts"></div>
-	<p>hello check</p>
+<center>
+<div class="contacts" >
+  <div class="phone"><i><img src="https://img.icons8.com/bubbles/100/000000/phone-office.png"></i><br>
+  Registration and website : 7908402299<br>
+  Events and others &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: 9007014705
+  </div>
+
+<div class="email">
+   <i><img src="https://img.icons8.com/bubbles/100/000000/email.png"></i><br>
+  envisiont20@gmail.com
+</div>  
+<div class="fb">
+  <i><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png"></i><br>
+  <a href="https://www.facebook.com/envision2020rkm/">@envision2020rkm</a>
+</div>
+</div>
+</center>
+	
 {% endblock %}
