--- a/csfest/templates/index.html
+++ b/csfest/templates/index.html
@@ -132,33 +132,36 @@
            {% endif %}
       {% else %}
       <div class="slideshow-container">
-      <div class="Slides fades">
+      <div class="Slides ">
         <!--<center>
         <p style="padding-bottom: 20px; padding-left: 3px;padding-top: 20px; color: white; text-shadow: 2px 2px 800000;">Yes Even We Exist! We invite you to Envision T20! We are newbies in organising events but we have tried to put our heart and soul in our work. The Dept. Of Computer Science, RKMRC welcomes you to attend an event so that we can reach the Grandeur in the years to come!&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp LET'S ENJOY TOGETHER!! </p></center>-->
-        <center> <div class="auto-carousel" style="padding-top: 30px; padding-bottom: 50px;">
+        <center> <div class="auto-carousel" style="padding-top: 30px; padding-bottom: 30px;">
         <!--<img class="mySlides" src="https://img.icons8.com/cotton/64/000000/laptop-coding.png" style="width:60px;">
         <img class="mySlides" src="https://img.icons8.com/dusk/64/000000/slr-camera.png" style="width:60px;">
         <img class="mySlides" src="https://img.icons8.com/bubbles/64/000000/angry-face-meme.png" style="width:60px;">-->
-        <p class="mySlides" style="font-family: 'Allura', cursive; font-size: 50px; font-weight: 0; color: #ff4d4d;"> "choto chai"</p>
+        <p class="mySlides" style="font-family: 'Allura', cursive; font-size: 50px; font-weight: 0; color: #ff4d4d;"> "You musn't be afraid to dream a little bigger"</p>
         <p class="mySlides" style="font-family: 'Sacramento', cursive; font-size: 50px; font-weight: 0; color:#ff99e6;"> "Every hero has a journey. Every journey has an end"</p>
         <p class="mySlides" style="font-family: 'Alex Brush', cursive; font-size: 50px; font-weight: 0; color:pink;"> "The dream is real"</p>
         <p class="mySlides" style="font-family: 'Rouge Script', cursive; font-size: 50px; font-weight: 0; color:#ff9980;"> "Can you avenge evil without becoming it?"</p>
+        <span style="padding-left: 400px; font-size: 30px; color: white; font-family: 'Roboto Condensed', sans-serif;">__Chris Nolan</span>
       </div>
     </center>
-
+        <div class="w3-animate-left">
         <i><img src="https://img.icons8.com/cotton/64/000000/laptop-coding.png"><br>coding round</i>
         <i><img src="https://img.icons8.com/dusk/64/000000/slr-camera.png"><br>photography</i>
         <i><img src="https://img.icons8.com/dusk/64/000000/treasure-map.png"><br>treasure hunt</i>
         <i><img src="https://img.icons8.com/dusk/64/000000/training.png"><br>seminar</i>
         <i><img src="https://img.icons8.com/bubbles/64/000000/angry-face-meme.png"><br>...and</i>
         <br>
-        <a href="{% url 'events'%}"  style="float: right; padding-right: 20px; font-size: 40px; color:red; font-family:'Vidaloka',serif">many more</a>
-       
-      <center><ul><a href="{% url 'register' %}" class="text-danger bg-warning glow"><h1 class="text-danger" style="padding-top: 100px; text-transform: uppercase; font-family: 'Alice', serif;"> Register</h1></a></ul>
+        <a href="{% url 'events'%}"  style="float: right; padding-right: 20px; font-size: 25px; color:red; font-family:'Vidaloka',serif">many more</a>
+       </div>
+      <center><ul><a href="{% url 'register' %}" class="text-danger bg-warning glow"><h1 class="text-danger " style="padding-top: 100px; text-transform: uppercase; font-family: 'Alice', serif;"> Register</h1></a></ul>
+        <br><br><br><br><br><br>
+        <h4 class="text-success">**PLEASE USE DESKTOP MODE FOR BETTER EXPERIENCE!!</h4>
       </center>
        </div>
 
-    <div class="Slides fades">
+    <div class="Slides  w3-animate-zoom">
       
         <p style="padding-bottom: 20px; padding-left: 3px;padding-top: 20px; color: white; text-shadow: 2px 2px 800000; font-family: 'Dosis', 'sans-serif'; font-size: 20px;">
           
@@ -166,7 +169,7 @@
           Envision started off with the wonderful conception that you can plant the seed 🌲 of an idea that will grow into something more substantial over time 🕒
           <br><br>
           A brainchild 🧠👶 of our seniors which has witnessed developments of seismic 🌪️ proportions from the time of its conception, ENVISION, a one-of-a-kind fest which transcends the boundaries of technicality 💻  to venture into the paradigms of creativity and sportsmanship.
-          <br><br>
+          
           <span>WE HAVE SOMETHING FOR EVERYONE AND EVERYTHING FOR SOMEONE.</span>
           <!--<br><br>
           Endowed with the blessings of the holy trinity,we seek to strike the perfect balance between reality and dreams. Dreams, that there exists an algorithm to everything and reality is merely its implementation.
