--- a/csfest/templates/workforce.html
+++ b/csfest/templates/workforce.html
@@ -57,7 +57,7 @@ position: absolute;">
 
 <!--<i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/82390718_118186799688125_989024543274172416_n.jpg?_nc_cat=111&_nc_oc=AQnRa9fV2KDxNlnO-WOG_0klY2rlUaqwmE1ebrUmECTUjRTNHWe0q855BkQWYuEfgYQ&_nc_ht=scontent.fccu10-1.fna&oh=90592fc4c0758849b0e49f4a811ab9ad&oe=5EA93B43" width="100px" height="100px"><br>Sayak Das<br>Documentary<br>8436743238<br>sayakd6@gmail.com</i>--></div>
 
-<div class="icon1" style="padding-top: 70px; opacity:.9;color:antiquewhite;">
+<div class="icon1 w3-animate-left" style="padding-top: 70px; opacity:.9;color:antiquewhite;">
   <i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/p960x960/81662675_118186709688134_2139951881680584704_o.jpg?_nc_cat=105&_nc_oc=AQklQMNFexnAXHVK1b-FChiOvYth_CdQkEeXxchdLSHDqPfvldYiLx3a4rRA7djH0cA&_nc_ht=scontent.fccu10-1.fna&_nc_tp=1&oh=cc352d69986aaf08acc36d1458f6636e&oe=5EA93FE3" width="100px" height="100px"><br>Rishav Nath Pati<br>L'artiste<br>9123877594<br>patirishavnath@gmail.com</i>
   
  <i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/81760339_118186859688119_3126575972027990016_n.jpg?_nc_cat=104&_nc_oc=AQk08U--a9eIsMMvctY5o3vptG6eBhRbKE1NA8ZgYd9AGVix2NY-1t_aAJRZpY_22P4&_nc_ht=scontent.fccu10-1.fna&oh=bd054734f27cc264bc401770666174e1&oe=5EA8A097" width="100px" height="100px"><br>Devdan Dey<br>The Architect<br>7908402299<br>mnz.devdan@gmail.com</i>  
@@ -65,20 +65,23 @@ position: absolute;">
  </div>
 
 
-<div class="icon2" style="padding-top: 30px; opacity:.9; color:antiquewhite;">
+<div class="icon2 w3-animate-right" style="padding-top: 30px; opacity:.9; color:antiquewhite;">
   <i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/p960x960/82368466_118186829688122_3153875196478226432_o.jpg?_nc_cat=101&_nc_oc=AQl5fup8J5lJux1M_2x1sL-ez_wkvfOHJqOzxApfuptfR5gIGCcYo2IovAYSvAME610&_nc_ht=scontent.fccu10-1.fna&_nc_tp=1&oh=3bf28b75cd6c17a6fdc1aba307d56db6&oe=5EA5EF46" width="100px" height="100px"><br>Sagnik Dasgupta<br>The Godfather<br>9007014705<br>dasgupta4.sagnik@gmail.com</i>
 
 <i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/p960x960/50896912_824284644572478_7052386637048709120_o.jpg?_nc_cat=107&_nc_oc=AQl4KwGYVFx3xlO0SnBKwqdqLn8OkfHGY4s6OEYPDRf3XNFX15Wz4smOscElWDY7eJQ&_nc_ht=scontent.fccu10-1.fna&_nc_tp=1&oh=7a7548341842c9e5ce01e6f1b43a6859&oe=5EAE5A31" width="100px" height="100px"><br>Koustab Ghosh<br>The Jack of all Trades<br>9836308666<br>koustab2000@gmail.com</i>
 
 <i><img src="https://scontent.fccu10-1.fna.fbcdn.net/v/t1.0-9/81624713_118186893021449_5804222664989999104_n.jpg?_nc_cat=102&_nc_oc=AQkJwgd5ohiaOceX2TWadzFf6eKQqWrEgjASNmeThwK4f-sSZ2w6mVzRmdbII9acT5M&_nc_ht=scontent.fccu10-1.fna&oh=0d449cf1abf74c55e72009158ac9aa76&oe=5EA9A430" width="100px" height="100px"><br>Soumyajyoti Das<br>The Columnist<br>8420697646<br>sjdas1317@outlook.com</i>
 </div>
-<div class= "name"><h4 style="opacity: .9; color:  #e60000; padding-top:25px;"> &nbsp&nbsp&nbspOther Comrades:</h4>
+<div class= "name">
+<h4 style="opacity: .9; color:  #e60000; padding-top:10px; padding-left: 20px;">Special Thanks:</h4>
+<ul><li style="opacity: .9; color: whitesmoke;">Sayanta Neogi</li></ul>
+<h4 style="opacity: .9; color:  #e60000; padding-top:0px;"> &nbsp&nbsp&nbspOther Comrades:</h4>
 <ul style="opacity: .9; color: whitesmoke;">
   <li>Kunal </li>
   <li>Dipanjan </li>
   <li>Milind</li>
   <li>Sutirtha</li>
-  <li>Samiparna</li>
+  <li>Sayak</li>
   <li>Shirsho</li>
   <li>Arijit</li>
   <li>Aryak</li>
