login and participant create changes

--- a/csfest/templates/csfest/participant_form.html
+++ b/csfest/templates/csfest/participant_form.html
@@ -25,6 +25,7 @@
 </style>
 
 <div class="bg">
+	<h4 class="text-danger"> Select at most 3 events from the list</h4>
 <div class="p-form">
 	<form action="" method="post">
 		{% csrf_token %}
